# libxfeat

./: .gitignore  CMakeLists.txt  LICENSE  README.md  license_template.txt
binding/: conv2d.m  conv2dData.xml  defineconv2d.m  interface_gen.m  test2.m  test_conv.m
data/: attributes.txt  scripts.txt  xfeat_network_structure.txt  xfeat_weight_structure.txt
data/MISC/: conv2d_profile.csv  conv2d_profile_detailed.csv
examples/: test_conv.m
include/: activation.hpp  add.hpp  conv2d.h  conv2d.hpp  conv2d_gemm.hpp  conv2d_implicit_gemm.hpp  device_ops.hpp  fold.hpp  int_fastdiv.h  interp.hpp  layer.hpp  normalize.hpp  pool.hpp  primitives.hpp  profile_configs.hpp  tensorio.hpp  xfeat.hpp  xfeat_params.hpp
matlab/: device2host.m  flatten.m  gen_xfeat.m  host2device.m  r2c.m  readme.md  test_conv2d.m  test_fold.m  test_im2col.m  unflatten.m
matlab/archive/: conv2d.m  test.slx  test_conv.m
matlab/generated_interfaces/: definexfeat.m  xfeatData.xml
params/: extract_torch_params.py  extract_torch_structure.py
src/: activation.cu  add.cu  conv2d.cu  conv2d_mex.cu  conv2d_mex.cu.disable  fold.cu  interp.cu  normalize.cu  pool.cu  primitives.cu  xfeat.cpp  xfeat.cpp.del  xfeat.cu
test/: benchmark_matx.cu  benchmark_torch.py  generate_profile_header.py  perf_xfeat.cpp  perf_xfeat.cu  perf_xfeat.py  profile_conv2d.cu  test_conv2d.cu  test_conv2d.py  test_fold.cpp  test_fold_simple.cpp  test_fold_simple.cu  test_interp.cpp  test_interp.py  test_libxfeat.cu  test_matx_blur.cu  test_pool.cpp  test_pool.py  test_sigmoid.cpp  test_sigmoid.py  test_xfeat.py  test_xfeat_all.py  test_xfeat_inter.py  test_xfeat_kp.py  test_xfeat_output.cpp  test_xfeat_output.py  test_xfeat_param.cu  test_xfeat_run.cpp
test/archive/: test_matx.cu
